RESOLVED FIXED196156
Include the CFNetworking task UUID to the NSError when a resource-load fails
https://bugs.webkit.org/show_bug.cgi?id=196156
Summary Include the CFNetworking task UUID to the NSError when a resource-load fails
Keith Rollin
Reported 2019-03-22 11:57:17 PDT
In order to help track the connection between a failed resource-load and a user-visible error message, include the CFNetworking task UUID in the associated error as an element of the userInfo property. This can then be pulled out and reported in the logging at the point the error is reported to the user. <rdar://problem/49128864>
Attachments
Patch (2.19 KB, patch)
2019-03-22 12:02 PDT, Keith Rollin
no flags
Archive of layout-test-results from ews124 for ios-simulator-wk2 (2.54 MB, application/zip)
2019-03-22 14:25 PDT, EWS Watchlist
no flags
Patch (2.28 KB, patch)
2019-03-27 14:20 PDT, Keith Rollin
no flags
Keith Rollin
Comment 1 2019-03-22 12:02:50 PDT
Alex Christensen
Comment 2 2019-03-22 14:02:50 PDT
Comment on attachment 365753 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=365753&action=review > Source/WebKit/NetworkProcess/cocoa/NetworkSessionCocoa.mm:611 > + newUserInfo[@"networkTaskID"] = [task description]; Maybe we should have "Description" in the key instead of "ID"
EWS Watchlist
Comment 3 2019-03-22 14:25:51 PDT
Comment on attachment 365753 [details] Patch Attachment 365753 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: https://webkit-queues.webkit.org/results/11616331 New failing tests: fast/visual-viewport/ios/min-scale-greater-than-one.html
EWS Watchlist
Comment 4 2019-03-22 14:25:52 PDT
Created attachment 365758 [details] Archive of layout-test-results from ews124 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews124 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.6
Keith Rollin
Comment 5 2019-03-27 14:20:57 PDT
Keith Rollin
Comment 6 2019-03-27 14:22:15 PDT
Changed ID to Description. Those test failures aren't mine.
WebKit Commit Bot
Comment 7 2019-03-27 14:48:10 PDT
Comment on attachment 366106 [details] Patch Clearing flags on attachment: 366106 Committed r243565: <https://trac.webkit.org/changeset/243565>
WebKit Commit Bot
Comment 8 2019-03-27 14:48:27 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.