Include the CFNetworking task UUID to the NSError when a resource-load fails https://bugs.webkit.org/show_bug.cgi?id=196156

Reviewed by Alex Christensen.

In order to help track the connection between a failed resource-load
and a user-visible error message, include the CFNetworking task UUID
in the associated error as an element of the userInfo property. This
can then be pulled out and reported in the logging at the point the
error is reported to the user.

* NetworkProcess/cocoa/NetworkSessionCocoa.mm:
(-[WKNetworkSessionDelegate URLSession:task:didCompleteWithError:]):


Canonical link: https://commits.webkit.org/210613@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243565 268f45cc-cd09-0410-ab3c-d52691b4dbfc